--- a/aboutme-website/styles.css
+++ b/aboutme-website/styles.css
@@ -75,7 +75,7 @@
 
 .footer {
   
-  margin: 10 10;
+  margin: 100px 10px;
   display: flex;
   justify-content: space-between;
   flex-direction: row;
