--- a/aboutme-website/styles.css
+++ b/aboutme-website/styles.css
@@ -62,6 +62,7 @@
 }
 .first {
   margin-top: 20px;
+  margin-bottom: 20px;
   display: flex;
   justify-content: center;
   font-family: 'Fira Sans', sans-serif;
