--- a/aboutme-website/styles.css
+++ b/aboutme-website/styles.css
@@ -80,7 +80,7 @@
   justify-content: space-between;
   flex-direction: row;
   align-items: center;
-  padding: 20px;
+  padding: 20px 20px 20px 20px;
   
 
 }
